--- a/src/CVApp/Web/CVApp.Web/appsettings.json
+++ b/src/CVApp/Web/CVApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CVApp.Web-297EC3B9-B5DE-4723-A1A2-7254A60D6AC8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CVAppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CVApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
