Change in UserDataModel; Home View create; Work on personal info view and viewModel created;

--- a/src/CVApp/Web/CVApp.Web/CVApp.Web.csproj
+++ b/src/CVApp/Web/CVApp.Web/CVApp.Web.csproj
@@ -15,8 +15,10 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\CVApp.Common\CVApp.Common\CVApp.Common.csproj" />
     <ProjectReference Include="..\..\..\CVApp.Data\CVApp.Data\CVApp.Data.csproj" />
     <ProjectReference Include="..\..\..\CVApp.Models\CVApp.Models\CVApp.Models.csproj" />
+    <ProjectReference Include="..\..\..\CVApp.ViewModels\ViewModels\CVApp.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
