--- a/src/CVApp/Web/CVApp.Web/appsettings.json
+++ b/src/CVApp/Web/CVApp.Web/appsettings.json
@@ -7,5 +7,10 @@
       "Default": "Warning"
     }
   },
+  "Cloudinary": {
+    "cloud_name": "cakeit",
+    "api_key": "291268699746231",
+    "api_secret": "MlMnsEGrpKpRf5-OePfVQFHQpao"
+  },
   "AllowedHosts": "*"
 }
