--- a/src/CVApp.Common/CVApp.Common/CVApp.Common.csproj
+++ b/src/CVApp.Common/CVApp.Common/CVApp.Common.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.1.0" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.8.0" />
+    <PackageReference Include="HtmlSanitizer" Version="4.0.210" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\CVApp.Models\CVApp.Models\CVApp.Models.csproj" />
     <ProjectReference Include="..\..\CVApp.ViewModels\ViewModels\CVApp.ViewModels.csproj" />
   </ItemGroup>
 
